Initial work on importing MinecraftAuth