@@ -5,7 +5,9 @@ import java.net.Proxy;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
+import java.util.Objects;
 
 /**
  * Base class for auth-related services.
@@ -88,20 +90,18 @@ public abstract class Service {
         try {
             StringBuilder queryString = new StringBuilder();
             for(Map.Entry<String, String> queryParam : queryParams.entrySet()) {
-                if(queryString.length() > 0) {
+                if(!queryString.isEmpty()) {
                     queryString.append("&");
                 }
 
                 queryString.append(queryParam.getKey())
                         .append('=')
-                        .append(URLEncoder.encode(queryParam.getValue(), "UTF-8"));
+                        .append(URLEncoder.encode(queryParam.getValue(), StandardCharsets.UTF_8));
             }
 
             return new URI(base.getScheme(), base.getAuthority(), base.getPath(), queryString.toString(), base.getFragment());
         } catch(URISyntaxException e) {
             throw new IllegalArgumentException("Arguments resulted in invalid endpoint URI.", e);
-        } catch(UnsupportedEncodingException e) {
-            throw new IllegalStateException("UTF-8 encoding not supported.", e);
         }
     }
 
@@ -120,10 +120,6 @@ public abstract class Service {
      * @param proxy Proxy to use. Null will be converted to NO_PROXY.
      */
     public void setProxy(Proxy proxy) {
-        if(proxy == null) {
-            this.proxy = Proxy.NO_PROXY;
-        } else {
-            this.proxy = proxy;
-        }
+        this.proxy = Objects.requireNonNullElse(proxy, Proxy.NO_PROXY);
     }
 }
